# SPMA

./: .gitignore  README.md  Ray-main-design-20260604-235508.md  SPMA-design-00-global-overview.md  SPMA-design-01-supervisor-agent.md  SPMA-design-02-doc-worker.md  SPMA-design-03-code-worker.md  SPMA-design-04-sql-worker.md  SPMA-design-05-data-ingestion.md  SPMA-design-06-infrastructure.md  SPMA-design-07-agent-architecture.md  pyproject.toml
.gstack/: api-contract.yaml  api-design-decisions.md  engineering-gap-analysis.md  module-contracts.md
.planning/phases/03-llamaindex-pipeline/: 03-llamaindex-pipeline-SUMMARY.md
config/: alerts.yaml  doc_weights.yaml  es_mapping.yaml  feature_flags.yaml  ingestion.yaml  spma.local.yaml  spma.yaml
data/: classification_eval.json  synonym_map.json
deployments/docker/: .env.example  Dockerfile.agent  Dockerfile.api  Dockerfile.ingestion  Dockerfile.vllm  REDEME.md  docker-compose.infrastructure.yml  docker-compose.yml  init-db.sql  init-infra.sql  otel-collector-config.yaml  prometheus.yml
deployments/docker/migrations/: 001_session_enhancements.sql  002_qr_cache_and_state.sql  003_qr_audit_buffer.sql  004_synonym_map.sql  005_repo_registry.sql
deployments/helm/spma/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
deployments/observability/: qr_alerts.yaml
docs/: API-00-overview.md  API-01-external-rest-api.md  API-02-agent-communication-protocol.md  API-03-worker-contracts.md  API-04-synthesis-agent-contract.md  API-05-data-ingestion-api.md  API-06-infrastructure-contracts.md  SPMA-technology-selection.md
docs/designs/: SPMA-design-00-global-overview.md  SPMA-design-03-code-worker.md  SPMA-design-05-data-ingestion.md  SPMA-design-08-quality-scoring.md  SPMA-design-09-LlamaIndex-改造方案.md  SPMA-design-10-query-rewrite.md  SPMA-design-11-phase1-synonym-map-activation.md  SPMA-design-11-phase2-strategy-orchestration.md  SPMA-design-11-phase3-multi-strategy-resolution.md  SPMA-design-11-phase4-multi-strategy-expansion.md  SPMA-design-11-phase5-multi-strategy-decomposition.md  SPMA-design-11-phase6-feedback-and-monitoring.md  SPMA-design-11-phase7-production-hardening.md  SPMA-design-11-phase8-rollout-and-rollback.md  SPMA-design-11-query-rewrite-optimization-v2-final.md  SPMA-design-11-query-rewrite-optimization.md  SPMA-design-12-router-entry-gateway-design.md  SPMA-design-13-industry-research-code-location.md
docs/issues/: 2026-06-29-langgraph-send-api-dispatch-arg-bug.md
docs/oneswiki/: api接口.md
docs/superpowers/plans/: 2026-06-07-init-project-structure.md  2026-06-07-phase0-convergence-spike-plan.md  2026-06-07-phase1-sql-agent.md  2026-06-08-phase2-doc-synthesis-agent-plan.md  2026-06-13-multi-provider-llm.md  2026-06-13-phase3-code-agent-implementation.md  2026-06-13-phase4-hardening.md  2026-06-15-code-agent-infra-di.md  2026-06-18-data-ingestion-api-implementation-plan.md  2026-06-18-llamaindex-integration.md  2026-06-19-auth-env-toggle.md  2026-06-19-doc-agent-retrieval-fix.md  2026-06-19-markdown-dir-ingestion-plan.md  2026-06-19-reranker-modelscope.md  2026-06-20-frontend-core-qa.md  2026-06-20-oneswiki-source-handler.md  2026-06-20-source-path-enum.md  2026-06-21-conversation-architecture.md  2026-06-21-lazy-session-creation-and-empty-history.md  2026-06-21-streaming-progress-plan.md  (+14 more)
frontend/: README.md  package-lock.json  package.json  spma-qa-prototype-final.html
frontend/src/app/: page.tsx  (+2 more)
prds/: PRD-00-master-overview.md  PRD-01-phase0-convergence-spike.md  PRD-02-phase1-sql-agent.md  PRD-03-phase2-doc-synthesis-agent.md  PRD-04-phase3-supervisor-code-agent.md  PRD-05-phase4-production-hardening.md  PRD-06-phase5-cognitive-layer.md
scripts/: check_repo_registry_integrity.py  eval_weights.py  run_ingestion.py  seed_data.py  seed_repo_registry.py
spike/: README.md  config.yaml  pyproject.toml
spike/annotation/: __init__.py  iaa.py
spike/data/: annotation_rubric.md
spike/data/corpus/: README.md
spike/data/queries/: README.md
spike/eval/: __init__.py  convergence_eval.py  fold_splitter.py  fp_analyzer.py  llm_judge.py  metrics.py  report_generator.py
spike/prompts/: prompt_a_simple.md  prompt_b_structured.md  prompt_c_scoring.md
spike/reports/: plan_b_design.md
spike/retrieval/: __init__.py  corpus_loader.py  indexer.py  searcher.py
spike/simulation/: __init__.py  multi_round_simulator.py  round_config.yaml
spike/tests/: __init__.py  test_e2e.py
src/spma/: __init__.py  bootstrap.py
tests/: __init__.py  conftest.py  test_audit.py  test_circuit_breaker.py  test_degradation_actions.py  test_degradation_manager.py  test_degradation_trigger_recovery.py  test_extract_turns.py  test_feature_flags.py
tests/e2e/: conftest.py  test_cross_source.py  test_degradation.py  test_doc_single_source.py  test_ingestion_api.py  test_single_source.py  test_sql_e2e.py  test_streaming.py  test_timeout.py
tests/eval/: agent_eval_dataset.json  conftest.py  run_eval.py  sql_eval_dataset.json  test_classification.py  test_code_recall.py  test_convergence.py  test_doc_rag.py  test_rag_quality.py  test_weights.py
tests/integration/: conftest.py  test_agent_loop.py  test_bootstrap_code_agent.py  test_code_agent_loop.py  test_markdown_ingestion.py  test_oneswiki_ingestion.py  test_pgvector.py  test_qr_migration.py  test_query_cache_pg.py  test_query_code_worker.py  test_sql_agent_loop.py  test_streaming.py  test_supervisor_loop.py  test_synonym_e2e.py  test_synonym_table.py
tests/unit/: test_auth.py  test_progress.py
(+374 files in other folders)
