[project]
name = "spma"
version = "0.1.0"
description = "企业级多源RAG智能问答系统 - SPMA (Supervisor-Powered Multi-Agent)"
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SPMA Team"}
]
keywords = ["rag", "llm", "agent", "langgraph", "text-to-sql"]

dependencies = [
    "langchain==1.3.4",
    "langgraph==1.2.4",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "psycopg[binary,pool]",
    "pgvector",
    "redis[hiredis]",
    "apscheduler",
    "sqlglot",
    "presidio-analyzer",
    "presidio-anonymizer",
    "anthropic",
    "openai",
    "pydantic>=2",
    "pydantic-settings",
    "tenacity",
    "httpx",
    "pyyaml",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "modelscope>=1.37.1",
    "asyncpg>=0.31.0",
    "llama-index-core>=0.12.0",
    "llama-index-vector-stores-postgres>=0.4.0",
    "llama-index-embeddings-langchain>=0.3.0",
    "llama-index-postprocessor-sbert-rerank>=0.2.0",
    "elasticsearch[async]>=9.0.0",
    "sentence-transformers>=5.0.0",
    "sse-starlette>=2.0.0",
    "markdownify",
]

[project.optional-dependencies]
code = [
    "tree-sitter",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]
observability = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "prometheus-client",
    "langfuse",
]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-cov",
    "testcontainers[postgres,redis]",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit",
]
all = [
    "spma[code]",
    "spma[observability]",
]

[project.scripts]
spma-api = "spma.api.app:main"
spma-ingest = "spma.ingestion.scheduler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spma"]

[tool.uv]
dev-dependencies = []

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
