[project]
name = "spma-convergence-spike"
version = "0.1.0"
description = "Phase 0: LLM Convergence Judgment Spike"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "anthropic>=0.34.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
